# washzen

./: Cargo.toml  README.md  Trunk.toml  build.sh  index.html
.forgejo/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: build.yml
public/: styles.scss
src/: formatting.rs  lib.rs  main.rs
src/components/: duration_editor.rs  mod.rs
