[package]
name = "washzen"
version = "0.1.0"
edition = "2024"
authors = ["Matt Crook <mattlcrook@icloud.com>"]


[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
wasm-bindgen = "0.2"
js-sys = "0.3.81"


[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
